added time tally - can't forget about those!

--- a/_posts/2025-04-14-ep3.md
+++ b/_posts/2025-04-14-ep3.md
@@ -9,6 +9,11 @@ tags:
 excerpt: "Let's get started with Active Scanning and Nmap!"
 ---
 
+## Time Tally
+
+- Time spent on topic: `4 hours`
+- Total time spent on series: `11 hours`
+
 Hello hackers,
 
 Today we dig into our first Mitre ATT&CK technique: `Active Scanning`, `T1595`. This technique is part of the tactic `Reconnaissance`, `TA0043`.
