--- a/_posts/2025-04-14-ep3.md
+++ b/_posts/2025-04-14-ep3.md
@@ -41,7 +41,7 @@ Let's find the answers to these questions!
 ....Yeah. It turned out that there are a LOT more types of scans than the 4 or 5 I usually use in pentesting. I don't want this to turn into a nmap wiki, so I will try to understand each type of scan, and do a short summary of what it does, and add contextual knowledge that I'm learning along the way.
 
 From the source code, I could see 16 different scan types. Let's dig in.
-## (1/16) SYN_SCAN
+## (1/16) `SYN` SCAN
  
  Send a `SYN` packet to the target port. 
  
