Added Nmap tags, Created newest blog

--- a/_posts/2025-04-14-ep3.md
+++ b/_posts/2025-04-14-ep3.md
@@ -6,6 +6,7 @@ tags:
   - Mitre ATT&CK
   - Red Team
   - Active Scanning
+  - Nmap
 excerpt: "Let's get started with Active Scanning and Nmap!"
 ---
 
